--- a/bob.html
+++ b/bob.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="c.css">
 </head>
 <body>
+    <a href="bob2.html"> <h1 class="home">BOB BOSS</h1></a>
 <link href="https://fonts.googleapis.com/css?family=Irish+Grover&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Kyiv*Type+Serif&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Abhaya+Libre+SemiBold&display=swap" rel="stylesheet" /><link href="./css/main.css" rel="stylesheet" /><title>Document</title></head><body><div class="v49_2"><div class="praznik.png"></div><div class="v39_6"></div><span class="v39_7">MINIONS LAND</span><span class="v39_9">CONTACTS</span><span class="v39_11">HOME</span><div class="v39_12"></div>
     <span class="v39_15">Миньон Лэнд — Парк развлечений для всей семьи!
 Это удивительный парк развлечений, погружающий в мир ярких и веселых миньонов! Этот парк создан для тех, кто хочет насладиться захватывающими аттракционами, увлекательными шоу и погрузиться в атмосферу самых популярных персонажей вселенной Гадкий я и Миньоны.
